// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Versioning should get lowest target versions 1`] = `
Array [
  Object {
    "parsedVersion": 7,
    "target": "node",
    "version": "7",
  },
  Object {
    "parsedVersion": 50.5,
    "target": "firefox",
    "version": "50.5",
  },
  Object {
    "parsedVersion": 20,
    "target": "chrome",
    "version": "20",
  },
]
`;

exports[`Versioning should support multi env config in browserslist package.json 1`] = `
Array [
  Object {
    "parsedVersion": 11.1,
    "target": "samsung",
    "version": "11.1-11.2",
  },
  Object {
    "parsedVersion": 13,
    "target": "safari",
    "version": "13",
  },
  Object {
    "parsedVersion": 74,
    "target": "opera",
    "version": "74",
  },
  Object {
    "parsedVersion": 11.5,
    "target": "op_mob",
    "version": "11.5",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 13.3,
    "target": "ios_saf",
    "version": "13.3",
  },
  Object {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  Object {
    "parsedVersion": 78,
    "target": "firefox",
    "version": "78",
  },
  Object {
    "parsedVersion": 88,
    "target": "edge",
    "version": "88",
  },
  Object {
    "parsedVersion": 88,
    "target": "chrome",
    "version": "88",
  },
  Object {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 91,
    "target": "android",
    "version": "91",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 10.4,
    "target": "and_qq",
    "version": "10.4",
  },
  Object {
    "parsedVersion": 89,
    "target": "and_ff",
    "version": "89",
  },
  Object {
    "parsedVersion": 91,
    "target": "and_chr",
    "version": "91",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 1`] = `
Array [
  Object {
    "parsedVersion": 70,
    "target": "chrome",
    "version": "70",
  },
]
`;

exports[`Versioning should support resolving browserslist config in subdirectory 2`] = `
Array [
  Object {
    "parsedVersion": 13,
    "target": "samsung",
    "version": "13.0",
  },
  Object {
    "parsedVersion": 14,
    "target": "safari",
    "version": "14",
  },
  Object {
    "parsedVersion": 76,
    "target": "opera",
    "version": "76",
  },
  Object {
    "parsedVersion": 62,
    "target": "op_mob",
    "version": "62",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 13.4,
    "target": "ios_saf",
    "version": "13.4-13.7",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie",
    "version": "11",
  },
  Object {
    "parsedVersion": 78,
    "target": "firefox",
    "version": "78",
  },
  Object {
    "parsedVersion": 90,
    "target": "edge",
    "version": "90",
  },
  Object {
    "parsedVersion": 90,
    "target": "chrome",
    "version": "90",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 91,
    "target": "android",
    "version": "91",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 10.4,
    "target": "and_qq",
    "version": "10.4",
  },
  Object {
    "parsedVersion": 89,
    "target": "and_ff",
    "version": "89",
  },
  Object {
    "parsedVersion": 91,
    "target": "and_chr",
    "version": "91",
  },
]
`;

exports[`Versioning should support single array config in browserslist package.json 1`] = `
Array [
  Object {
    "parsedVersion": 11.1,
    "target": "samsung",
    "version": "11.1-11.2",
  },
  Object {
    "parsedVersion": 13,
    "target": "safari",
    "version": "13",
  },
  Object {
    "parsedVersion": 74,
    "target": "opera",
    "version": "74",
  },
  Object {
    "parsedVersion": 11.5,
    "target": "op_mob",
    "version": "11.5",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 13.3,
    "target": "ios_saf",
    "version": "13.3",
  },
  Object {
    "parsedVersion": 10,
    "target": "ie_mob",
    "version": "10",
  },
  Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  Object {
    "parsedVersion": 78,
    "target": "firefox",
    "version": "78",
  },
  Object {
    "parsedVersion": 88,
    "target": "edge",
    "version": "88",
  },
  Object {
    "parsedVersion": 81,
    "target": "chrome",
    "version": "81",
  },
  Object {
    "parsedVersion": 7,
    "target": "bb",
    "version": "7",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 91,
    "target": "android",
    "version": "91",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 10.4,
    "target": "and_qq",
    "version": "10.4",
  },
  Object {
    "parsedVersion": 89,
    "target": "and_ff",
    "version": "89",
  },
  Object {
    "parsedVersion": 91,
    "target": "and_chr",
    "version": "91",
  },
]
`;

exports[`Versioning should support single version config in browserslist package.json 1`] = `
Array [
  Object {
    "parsedVersion": 8,
    "target": "safari",
    "version": "8",
  },
  Object {
    "parsedVersion": 9,
    "target": "ie",
    "version": "9",
  },
  Object {
    "parsedVersion": 20,
    "target": "firefox",
    "version": "20",
  },
  Object {
    "parsedVersion": 32,
    "target": "chrome",
    "version": "32",
  },
]
`;

exports[`Versioning should support string config in rule option 1`] = `
Array [
  Object {
    "parsedVersion": 13,
    "target": "samsung",
    "version": "13.0",
  },
  Object {
    "parsedVersion": 14,
    "target": "safari",
    "version": "14",
  },
  Object {
    "parsedVersion": 76,
    "target": "opera",
    "version": "76",
  },
  Object {
    "parsedVersion": 62,
    "target": "op_mob",
    "version": "62",
  },
  Object {
    "parsedVersion": 0,
    "target": "op_mini",
    "version": "all",
  },
  Object {
    "parsedVersion": 2.5,
    "target": "kaios",
    "version": "2.5",
  },
  Object {
    "parsedVersion": 13.4,
    "target": "ios_saf",
    "version": "13.4-13.7",
  },
  Object {
    "parsedVersion": 11,
    "target": "ie",
    "version": "11",
  },
  Object {
    "parsedVersion": 78,
    "target": "firefox",
    "version": "78",
  },
  Object {
    "parsedVersion": 90,
    "target": "edge",
    "version": "90",
  },
  Object {
    "parsedVersion": 90,
    "target": "chrome",
    "version": "90",
  },
  Object {
    "parsedVersion": 7.12,
    "target": "baidu",
    "version": "7.12",
  },
  Object {
    "parsedVersion": 91,
    "target": "android",
    "version": "91",
  },
  Object {
    "parsedVersion": 12.12,
    "target": "and_uc",
    "version": "12.12",
  },
  Object {
    "parsedVersion": 10.4,
    "target": "and_qq",
    "version": "10.4",
  },
  Object {
    "parsedVersion": 89,
    "target": "and_ff",
    "version": "89",
  },
  Object {
    "parsedVersion": 91,
    "target": "and_chr",
    "version": "91",
  },
]
`;
